--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -86,6 +86,7 @@
 <% end %>
 
 <%= turbo_frame_tag "link_comments", src: link_comments_path(link_id: @link.id) %>
+<%= turbo_frame_tag "link_comments_new", src: new_link_comment_path(link_id: @link.id) %>
 
 <%= turbo_stream_from "link_details_#{@link.id}" %>
 <%= render 'details', link: @link %>
