--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,6 +2,6 @@
   <strong><%= comment.user.username %>: </strong>
   <p><%= comment.content %></p>
   <%= time_tag comment.created_at, class: 'small' do %>
-    <%= time_ago_in_words comment.created_at %> ago
+    <%= comment.created_at.strftime '%I:%M%p' %>
   <% end %>
 </div>
