--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -85,7 +85,11 @@
   </div>
 <% end %>
 
-<%= turbo_frame_tag "link_comments", src: link_comments_path(link_id: @link.id) %>
+<%= turbo_stream_from "link_comments_#{@link.id}" %>
+
+<div id="comments">
+  <%= turbo_frame_tag "link_comments", src: link_comments_path(link_id: @link.id) %>
+</div>
 <%= turbo_frame_tag "link_comments_new", src: new_link_comment_path(link_id: @link.id) %>
 
 <%= turbo_stream_from "link_details_#{@link.id}" %>
