Added a notification badge for messages

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id comment %>" class="comment">
+<div id="<%= dom_id comment %>" class="comment" data-comments-sidebar-target="comment">
   <strong><%= comment.user.username %>: </strong>
   <p><%= comment.content %></p>
 </div>
