user agents changed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 <header>
   <div class="header__age-warning">
     🔞 This is an app for adults over the age of 18 only.</br>
-    ⚠️ E621 has blocked Walltaker! :( I'm working on it.
+    ⚠️ E621 has blocked Walltaker! :( Mia culpa! Fixed an issue I made. Some things may work, others may not. In contact with E621.
   </div>
   <div class="header__inner">
     <h1><a href="/">
