Added swift client to icons

--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -90,6 +90,9 @@
         <% when :wallpaper_engine %>
           <span>Lycaon's Wallpaper Engine</span>
           <ion-icon name="cog"></ion-icon>
+        <% when :swift %>
+          <span>Mac Client</span>
+          <ion-icon class="apple-icon" name="logo-apple"></ion-icon>
         <% when :unknown %>
           <ion-icon name="help-circle-outline"></ion-icon>
         <% end %>
