Added link to macos client

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -107,7 +107,7 @@
   <li>
     <a href="https://github.com/PawCorp/walltaker-desktop-client/releases/latest" target="_blank">Desktop
       Client</a>
-    (Windows/Mac/Linux)
+    (Windows/Linux)
   </li>
   <li>
     <a href="https://github.com/PawCorp/walltaker-android-client/releases/latest" target="_blank">Android
@@ -122,6 +122,10 @@
   <li>
     <a href="https://github.com/Deanskond/walltaker_automate" target="_blank">Deanskond's Automate Client</a>
     (<a href="https://llamalab.com/automate/">Automate App for Android</a>)
+  </li>
+  <li>
+    <a href="https://github.com/PawCorp/walltaker-macos/releases/latest" target="_blank">MacOS Client</a>
+    (MacOS)
   </li>
   <li>
     <a href="http://joi.how/" target="_blank">JOI.how</a> (Web-based)
