Oops, missed device preivew for swift

--- a/app/views/links/_details.html.erb
+++ b/app/views/links/_details.html.erb
@@ -7,6 +7,7 @@
   joihow: :desktop,
   automate: :mobile,
   wallpaper_engine: :desktop,
+  swift: :desktop,
   unknown: :desktop
 } %>
 <% device = devices[client] %>
