--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -18,6 +18,16 @@
     margin-top: 0;
 }
 
+.dashboard table a[data-online=true]::after {
+    content: '';
+    display: inline-block;
+    width: 0.5rem;
+    height: 0.5rem;
+    background: var(--success);
+    border-radius: 100%;
+    margin-left: 0.25rem;
+}
+
 .dashboard table td a {
     white-space: nowrap;
     overflow: hidden;
