--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,7 @@
 <body>
 <header>
   <div class="header__age-warning">
-    🔞 This is an app for adults over the age of 18 only.</br>
-    💛 We're back!
+    🔞 This is an app for adults over the age of 18 only.
   </div>
   <div class="header__inner">
     <h1><a href="/">
