Remove browser autocomplete from comments, feedback, and post id, closes #34

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_with(model: comment, url: [link, comment], class: 'new_comment_form', data: { controller: 'new-comment-form' }) do |form| %>
-    <%= form.text_field :content, data: { 'new-comment-form-target': 'input', action: 'input->new-comment-form#inputChange' } %>
+    <%= form.text_field :content, autocomplete: 'off', data: { 'new-comment-form-target': 'input', action: 'input->new-comment-form#inputChange' } %>
     <%= form.submit 'Send', data: { 'new-comment-form-target': 'send' }, disabled: true %>
 <% end %>
