--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,8 @@
 <body>
 <header>
   <div class="header__age-warning">
-    🔞 This is an app for adults over the age of 18 only.
+    🔞 This is an app for adults over the age of 18 only.<br/>
+    Requests? Bugs? <a href="https://discord.gg/WgCQpmus" target="_blank">Gios made us a discord!</a>
   </div>
   <div class="header__inner">
     <h1><a href="/">
