--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -130,6 +130,11 @@
     display: block;
 }
 
+.dashboard__leaderboard {
+    grid-column: 1 / span 3;
+    grid-row: 6 / span 1;
+}
+
 .dashboard__your-total-changes {
     grid-column: 1 / span 1;
     grid-row: 4 / span 1;
@@ -137,7 +142,9 @@
 
 .dashboard__updates {
     grid-column: 2 / -1;
-    grid-row: 2 / span 6;
+    grid-row: 2 / span 4;
+    overflow: scroll;
+    max-height: 830px;
 }
 
 @media screen and (max-width: 590px) {
@@ -148,6 +155,8 @@
     .dashboard__updates {
         grid-column: 1 / span 1;
         grid-row: 2 / span 1;
+        overflow: initial;
+        max-height: initial;
     }
 
     .dashboard__online {
@@ -164,6 +173,11 @@
 
     .dashboard__your-total-changes {
         grid-row: 5 / span 1;
+    }
+
+    .dashboard__leaderboard {
+        grid-column: 1 / span 1;
+        grid-row: 7 / span 1;
     }
 }
 
