Updated discord link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 <header>
   <div class="header__age-warning">
     🔞 This is an app for adults over the age of 18 only.<br/>
-    Requests? Bugs? <a href="https://discord.gg/WgCQpmus" target="_blank">Gios made us a discord!</a>
+    Requests? Bugs? <a href="https://discord.gg/waaHCqUXj6" target="_blank">Gios made us a discord!</a>
   </div>
   <div class="header__inner">
     <h1><a href="/">
