Oops, using _path helper instead since in a turbo stream response, we don't have the full connection so we don't know which URL it's coming from

--- a/app/views/dashboard/_recent_posts.html.erb
+++ b/app/views/dashboard/_recent_posts.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag "recent_posts", target: "_top" do %>
   <% recent_posts.each do |past_link| %>
-    <%= link_to user_url(past_link.user.username) do %>
+    <%= link_to user_path(past_link.user.username) do %>
       <%= image_tag past_link.post_thumbnail_url %>
     <% end %>
   <% end %>
